--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@mui/icons-material": "^5.14.9",
     "@mui/material": "^5.14.9",
     "axios": "^1.5.0",
+    "bootstrap": "^5.3.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
