--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "reactweatherapp",
   "private": true,
+  "homepage": "https://dd3dd.github.io/ReactWeatherApp",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
@@ -17,6 +20,7 @@
     "@mui/material": "^5.14.9",
     "axios": "^1.5.0",
     "bootstrap": "^5.3.2",
+    "gh-pages": "^6.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0"
